--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -920,15 +920,12 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.isis_authentication.both.mode is arista.avd.defined
           and (ethernet_interface.isis_authentication.both.mode in ["md5", "text"]
                or (ethernet_interface.isis_authentication.both.mode == "sha" and ethernet_interface.isis_authentication.both.sha.key_id is arista.avd.defined)
-               or (ethernet_interface.isis_authentication.both.mode == "shared-secret"
-                   and ethernet_interface.isis_authentication.both.shared_secret.profile is arista.avd.defined
-                   and ethernet_interface.isis_authentication.both.shared_secret.algorithm is arista.avd.defined)) %}
+               or (ethernet_interface.isis_authentication.both.mode == "shared-secret" and ethernet_interface.isis_authentication.both.shared_secret is arista.avd.defined)) %}
 {%         set isis_auth_cli = "isis authentication mode " ~ ethernet_interface.isis_authentication.both.mode %}
 {%         if ethernet_interface.isis_authentication.both.mode == "sha" %}
 {%             set isis_auth_cli = isis_auth_cli ~ " key-id " ~ ethernet_interface.isis_authentication.both.sha.key_id %}
 {%         elif ethernet_interface.isis_authentication.both.mode == "shared-secret" %}
-{%             set isis_auth_cli = isis_auth_cli ~ " profile " ~ ethernet_interface.isis_authentication.both.shared_secret.profile %}
-{%             set isis_auth_cli = isis_auth_cli ~ " algorithm " ~ ethernet_interface.isis_authentication.both.shared_secret.algorithm %}
+{%             set isis_auth_cli = isis_auth_cli ~ " profile " ~ ethernet_interface.isis_authentication.both.shared_secret.profile ~ " algorithm " ~ ethernet_interface.isis_authentication.both.shared_secret.algorithm %}
 {%         endif %}
 {%         if ethernet_interface.isis_authentication.both.rx_disabled is arista.avd.defined(true) %}
 {%             set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
@@ -945,8 +942,7 @@ interface {{ ethernet_interface.name }}
 {%             if ethernet_interface.isis_authentication.level_1.mode == "sha" %}
 {%                 set isis_auth_cli = isis_auth_cli ~ " key-id " ~ ethernet_interface.isis_authentication.level_1.sha.key_id %}
 {%             elif ethernet_interface.isis_authentication.level_1.mode == "shared-secret" %}
-{%                 set isis_auth_cli = isis_auth_cli ~ " profile " ~ ethernet_interface.isis_authentication.level_1.shared_secret.profile ~
-                      " algorithm " ~ ethernet_interface.isis_authentication.level_1.shared_secret.algorithm %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " profile " ~ ethernet_interface.isis_authentication.level_1.shared_secret.profile ~ " algorithm " ~ ethernet_interface.isis_authentication.level_1.shared_secret.algorithm %}
 {%             endif %}
 {%             if ethernet_interface.isis_authentication.level_1.rx_disabled is arista.avd.defined(true) %}
 {%                 set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
@@ -963,8 +959,7 @@ interface {{ ethernet_interface.name }}
 {%             if ethernet_interface.isis_authentication.level_2.mode == "sha" %}
 {%                 set isis_auth_cli = isis_auth_cli ~ " key-id " ~ ethernet_interface.isis_authentication.level_2.sha.key_id %}
 {%             elif ethernet_interface.isis_authentication.level_2.mode == "shared-secret" %}
-{%                 set isis_auth_cli = isis_auth_cli ~ " profile " ~ ethernet_interface.isis_authentication.level_2.shared_secret.profile ~
-                      " algorithm " ~ ethernet_interface.isis_authentication.level_2.shared_secret.algorithm %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " profile " ~ ethernet_interface.isis_authentication.level_2.shared_secret.profile ~ " algorithm " ~ ethernet_interface.isis_authentication.level_2.shared_secret.algorithm %}
 {%             endif %}
 {%             if ethernet_interface.isis_authentication.level_2.rx_disabled is arista.avd.defined(true) %}
 {%                 set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
@@ -976,26 +971,17 @@ interface {{ ethernet_interface.name }}
 {%         set both_key_ids = [] %}
 {%         if ethernet_interface.isis_authentication.both.key_ids is arista.avd.defined %}
 {%             for auth_key in ethernet_interface.isis_authentication.both.key_ids | arista.avd.natural_sort("id") %}
-{%                 if auth_key.id is arista.avd.defined
-                       and auth_key.algorithm is arista.avd.defined
-                       and auth_key.key_type is arista.avd.defined
-                       and auth_key.key is arista.avd.defined %}
-{%                     do both_key_ids.append(auth_key.id) %}
-{%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
+{%                 do both_key_ids.append(auth_key.id) %}
+{%                 if auth_key.rfc_5310 is arista.avd.defined(true) %}
    isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }}
-{%                     else %}
+{%                 else %}
    isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }}
-{%                     endif %}
 {%                 endif %}
 {%             endfor %}
 {%         endif %}
 {%         if ethernet_interface.isis_authentication.level_1.key_ids is arista.avd.defined %}
-{%             for auth_key in ethernet_interface.isis_authentication.level_1.key_ids %}
-{%                 if auth_key.id is arista.avd.defined
-                       and auth_key.id not in both_key_ids
-                       and auth_key.algorithm is arista.avd.defined
-                       and auth_key.key_type is arista.avd.defined
-                       and auth_key.key is arista.avd.defined %}
+{%             for auth_key in ethernet_interface.isis_authentication.level_1.key_ids | arista.avd.natural_sort("id") %}
+{%                 if auth_key.id not in both_key_ids %}
 {%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
    isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }} level-1
 {%                     else %}
@@ -1005,12 +991,8 @@ interface {{ ethernet_interface.name }}
 {%             endfor %}
 {%         endif %}
 {%         if ethernet_interface.isis_authentication.level_2.key_ids is arista.avd.defined %}
-{%             for auth_key in ethernet_interface.isis_authentication.level_2.key_ids %}
-{%                 if auth_key.id is arista.avd.defined
-                       and auth_key.id not in both_key_ids
-                       and auth_key.algorithm is arista.avd.defined
-                       and auth_key.key_type is arista.avd.defined
-                       and auth_key.key is arista.avd.defined %}
+{%             for auth_key in ethernet_interface.isis_authentication.level_2.key_ids | arista.avd.natural_sort("id") %}
+{%                 if auth_key.id not in both_key_ids %}
 {%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
    isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }} level-2
 {%                     else %}
