Feat(eos_cli_config_gen): Extend GRE span with payload support (#4190)

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
@@ -228,6 +228,7 @@
 {% include 'eos/ipv6-hardware.j2' %}
 {# Monitor Sessions #}
 {% include 'eos/monitor-sessions.j2' %}
+{% include 'eos/monitor-session-default-encapsulation-gre.j2' %}
 {# qos #}
 {% include 'eos/qos.j2' %}
 {# eos - priority flow control #}
