--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -463,9 +463,14 @@ router bgp {{ router_bgp.as }}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                 endif %}
 {%             endif %}
+{%             if redistribute_route.source_protocol == "isis" %}
+{%                 if redistribute_route.isis_level is arista.avd.defined %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                 endif %}
+{%             endif %}
 {%             if redistribute_route.source_protocol == "bgp" %}
 {%                 set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
-{%             elif redistribute_route.include_leaked is arista.avd.defined %}
+{%             elif redistribute_route.include_leaked is arista.avd.defined(true) and redistribute_route.source_protocol in ["isis", "ospf", "ospfv3", "static", "connected"] %}
 {%                 set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%             endif %}
 {%             if redistribute_route.route_map is arista.avd.defined %}
@@ -930,9 +935,14 @@ router bgp {{ router_bgp.as }}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                     endif %}
 {%                 endif %}
+{%                 if redistribute_route.source_protocol == "isis" %}
+{%                     if redistribute_route.isis_level is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                     endif %}
+{%                 endif %}
 {%                 if redistribute_route.source_protocol == "bgp" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
-{%                 elif redistribute_route.include_leaked is arista.avd.defined  and redistribute_route.source_protocol in ["connected", "static", "isis", "ospf", "ospfv3"] %}
+{%                 elif redistribute_route.include_leaked is arista.avd.defined(true)  and redistribute_route.source_protocol in ["connected", "static", "isis", "ospf", "ospfv3"] %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                 endif %}
 {%                 if redistribute_route.route_map is arista.avd.defined %}
@@ -984,12 +994,17 @@ router bgp {{ router_bgp.as }}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                     endif %}
 {%                 endif %}
-{%                 if redistribute_route.include_leaked is arista.avd.defined(true) and redistribute_route.source_protocol in ["isis", "isis level-1", "isis level-2", "isis level-1-2"] %}
-{%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                 if redistribute_route.source_protocol == "isis" %}
+{%                     if redistribute_route.isis_level is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                     endif %}
+{%                     if redistribute_route.include_leaked is arista.avd.defined(true) %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                     endif %}
 {%                 endif %}
 {%                 if redistribute_route.route_map is arista.avd.defined %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
-{%                 elif redistribute_route.source_protocol in ["isis", "isis level-1", "isis level-2", "isis level-1-2"] and redistribute_route.rcf is arista.avd.defined %}
+{%                 elif redistribute_route.source_protocol == "isis" and redistribute_route.rcf is arista.avd.defined %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                 endif %}
       {{ redistribute_route_cli }}
@@ -1101,14 +1116,19 @@ router bgp {{ router_bgp.as }}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                     endif %}
 {%                 endif %}
+{%                 if redistribute_route.source_protocol == "isis" %}
+{%                     if redistribute_route.isis_level is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                     endif %}
+{%                 endif %}
 {%                 if redistribute_route.source_protocol == "bgp" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
-{%                 elif redistribute_route.include_leaked is arista.avd.defined(true) and redistribute_route.source_protocol in ["connected", "static", "isis", "isis level-1", "isis level-2", "isis level-1-2", "ospfv3"] %}
+{%                 elif redistribute_route.include_leaked is arista.avd.defined(true) and redistribute_route.source_protocol in ["connected", "static", "isis", "ospfv3"] %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                 endif %}
 {%                 if redistribute_route.route_map is arista.avd.defined %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
-{%                 elif redistribute_route.source_protocol in ["connected", "static", "isis", "isis level-1", "isis level-2", "isis level-1-2", "user", "dynamic"] %}
+{%                 elif redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
 {%                     if redistribute_route.rcf is arista.avd.defined %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                     endif %}
@@ -1163,8 +1183,13 @@ router bgp {{ router_bgp.as }}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                     endif %}
 {%                 endif %}
-{%                 if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
-{%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                 if redistribute_route.source_protocol == "isis" %}
+{%                     if redistribute_route.isis_level is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                     endif %}
+{%                     if redistribute_route.include_leaked is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                     endif %}
 {%                 endif %}
 {%                 if redistribute_route.route_map is arista.avd.defined %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
@@ -1741,14 +1766,19 @@ router bgp {{ router_bgp.as }}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                     endif %}
 {%                 endif %}
+{%                 if redistribute_route.source_protocol == "isis" %}
+{%                     if redistribute_route.isis_level is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                     endif %}
+{%                 endif %}
 {%                 if redistribute_route.source_protocol == "bgp" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
-{%                 elif redistribute_route.include_leaked is arista.avd.defined(true) and redistribute_route.source_protocol in ["connected", "static", "isis", "isis level-1", "isis level-2", "isis level-1-2", "ospf", "ospfv3"] %}
+{%                 elif redistribute_route.include_leaked is arista.avd.defined(true) and redistribute_route.source_protocol in ["connected", "static", "isis", "ospf", "ospfv3"] %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                 endif %}
 {%                 if redistribute_route.route_map is arista.avd.defined %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
-{%                 elif redistribute_route.source_protocol in ["connected", "static", "isis", "isis level-1", "isis level-2", "isis level-1-2", "user", "dynamic"] %}
+{%                 elif redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
 {%                     if redistribute_route.rcf is arista.avd.defined %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                     endif %}
@@ -1868,9 +1898,14 @@ router bgp {{ router_bgp.as }}
 {%                             set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                         endif %}
 {%                     endif %}
+{%                     if redistribute_route.source_protocol == "isis" %}
+{%                         if redistribute_route.isis_level is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                         endif %}
+{%                     endif %}
 {%                     if redistribute_route.source_protocol == "bgp" %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
-{%                     elif redistribute_route.include_leaked is arista.avd.defined %}
+{%                     elif redistribute_route.include_leaked is arista.avd.defined(true) and redistribute_route.source_protocol in ["connected", "isis", "ospf", "ospfv3", "static"] %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                     endif %}
 {%                     if redistribute_route.route_map is arista.avd.defined %}
@@ -1922,8 +1957,13 @@ router bgp {{ router_bgp.as }}
 {%                             set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                         endif %}
 {%                     endif %}
-{%                     if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
-{%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                     if redistribute_route.source_protocol == "isis" %}
+{%                         if redistribute_route.isis_level is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                         endif %}
+{%                         if redistribute_route.include_leaked is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                         endif %}
 {%                     endif %}
 {%                     if redistribute_route.route_map is arista.avd.defined %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
@@ -2007,9 +2047,14 @@ router bgp {{ router_bgp.as }}
 {%                             set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                         endif %}
 {%                     endif %}
+{%                     if redistribute_route.source_protocol == "isis" %}
+{%                         if redistribute_route.isis_level is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                         endif %}
+{%                     endif %}
 {%                     if redistribute_route.source_protocol == "bgp" %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
-{%                     elif redistribute_route.include_leaked is arista.avd.defined %}
+{%                     elif redistribute_route.include_leaked is arista.avd.defined(true) and redistribute_route.source_protocol in ["connected", "isis", "ospfv3", "static"] %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                     endif %}
 {%                     if redistribute_route.route_map is arista.avd.defined %}
@@ -2061,8 +2106,13 @@ router bgp {{ router_bgp.as }}
 {%                             set redistribute_route_cli = redistribute_route_cli ~ " match " ~  redistribute_route.ospf_route_type %}
 {%                         endif %}
 {%                     endif %}
-{%                     if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
-{%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                     if redistribute_route.source_protocol == "isis" %}
+{%                         if redistribute_route.isis_level is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " " ~ redistribute_route.isis_level %}
+{%                         endif %}
+{%                         if redistribute_route.include_leaked is arista.avd.defined(true) %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                         endif %}
 {%                     endif %}
 {%                     if redistribute_route.route_map is arista.avd.defined %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
