--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -153,43 +153,38 @@ interface {{ port_channel_interface.name }}
 {%     endif %}
 {%     for vlan_translation in port_channel_interface.switchport.vlan_translations.direction_both | arista.avd.natural_sort('from') %}
 {%         set vlan_translation_both_cli = 'switchport vlan translation' %}
-{%         if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
-{%             set vlan_translation_both_cli = vlan_translation_both_cli ~ ' ' ~  vlan_translation.from %}
-{%             if vlan_translation.dot1q_tunnel is arista.avd.defined(true) %}
-{%                 set vlan_translation_both_cli = vlan_translation_both_cli ~ ' dot1q-tunnel' %}
-{%             elif vlan_translation.inner_vlan_from is arista.avd.defined %}
-{%                 set vlan_translation_both_cli = vlan_translation_both_cli ~ ' inner ' ~ vlan_translation.inner_vlan_from %}
-{%                 if vlan_translation.network is arista.avd.defined(true) %}
-{%                     set vlan_translation_both_cli = vlan_translation_both_cli ~ ' network' %}
-{%                 endif %}
+{%         set vlan_translation_both_cli = vlan_translation_both_cli ~ ' ' ~  vlan_translation.from %}
+{%         if vlan_translation.dot1q_tunnel is arista.avd.defined(true) %}
+{%             set vlan_translation_both_cli = vlan_translation_both_cli ~ ' dot1q-tunnel' %}
+{%         elif vlan_translation.inner_vlan_from is arista.avd.defined %}
+{%             set vlan_translation_both_cli = vlan_translation_both_cli ~ ' inner ' ~ vlan_translation.inner_vlan_from %}
+{%             if vlan_translation.network is arista.avd.defined(true) %}
+{%                 set vlan_translation_both_cli = vlan_translation_both_cli ~ ' network' %}
 {%             endif %}
-{%             set vlan_translation_both_cli = vlan_translation_both_cli ~ ' ' ~  vlan_translation.to %}
-   {{ vlan_translation_both_cli }}
 {%         endif %}
+{%         set vlan_translation_both_cli = vlan_translation_both_cli ~ ' ' ~  vlan_translation.to %}
+   {{ vlan_translation_both_cli }}
 {%     endfor %}
 {%     if port_channel_interface.switchport.vlan_translations.direction_in is arista.avd.defined %}
 {%         for vlan_translation in port_channel_interface.switchport.vlan_translations.direction_in %}
-{%             set vlan_translation_in_cli = 'switchport vlan translation in' %}
-{%             if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
-{%                 set vlan_translation_in_cli = 'switchport vlan translation in ' ~  vlan_translation.from %}
-{%                 if vlan_translation.dot1q_tunnel is arista.avd.defined(true) %}
-{%                     set vlan_translation_in_cli = vlan_translation_in_cli ~ ' dot1q-tunnel' %}
-{%                 elif vlan_translation.inner_vlan_from is arista.avd.defined %}
-{%                     set vlan_translation_in_cli = vlan_translation_in_cli ~ ' inner ' ~ vlan_translation.inner_vlan_from %}
-{%                 endif %}
-{%                 set vlan_translation_in_cli = vlan_translation_in_cli ~ " " ~  vlan_translation.to %}
-   {{ vlan_translation_in_cli }}
+{%             set vlan_translation_in_cli = 'switchport vlan translation in ' ~  vlan_translation.from %}
+{%             if vlan_translation.dot1q_tunnel is arista.avd.defined(true) %}
+{%                 set vlan_translation_in_cli = vlan_translation_in_cli ~ ' dot1q-tunnel' %}
+{%             elif vlan_translation.inner_vlan_from is arista.avd.defined %}
+{%                 set vlan_translation_in_cli = vlan_translation_in_cli ~ ' inner ' ~ vlan_translation.inner_vlan_from %}
 {%             endif %}
+{%             set vlan_translation_in_cli = vlan_translation_in_cli ~ " " ~  vlan_translation.to %}
+   {{ vlan_translation_in_cli }}
 {%         endfor %}
 {%     endif %}
 {%     if port_channel_interface.switchport.vlan_translations.direction_out is arista.avd.defined %}
 {%         for vlan_translation in port_channel_interface.switchport.vlan_translations.direction_out %}
-{%             if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
+{%             if vlan_translation.to is arista.avd.defined %}
 {%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from ~ ' ' ~  vlan_translation.to %}
 {%                 if vlan_translation.inner_vlan_to is arista.avd.defined %}
 {%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' inner ' ~ vlan_translation.inner_vlan_to %}
 {%                 endif %}
-{%             elif vlan_translation.from is arista.avd.defined and vlan_translation.dot1q_tunnel is arista.avd.defined %}
+{%             elif vlan_translation.dot1q_tunnel is arista.avd.defined %}
 {%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from %}
 {%                 if vlan_translation.dot1q_tunnel.all is arista.avd.defined(true) %}
 {%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel all' %}
