--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -122,8 +122,11 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.switchport.phone.trunk is arista.avd.defined %}
    switchport phone trunk {{ port_channel_interface.switchport.phone.trunk }}
 {%     endif %}
-{%     if port_channel_interface.switchport.vlan_translations.required is arista.avd.defined(true) %}
+{%     if port_channel_interface.switchport.vlan_translations.in_required is arista.avd.defined(true) %}
    switchport vlan translation in required
+{%     endif %}
+{%     if port_channel_interface.switchport.vlan_translations.out_required is arista.avd.defined(true) %}
+   switchport vlan translation out required
 {%     endif %}
 {%     if port_channel_interface.switchport.dot1q.vlan_tag is arista.avd.defined %}
    switchport dot1q vlan tag {{ port_channel_interface.switchport.dot1q.vlan_tag }}
