--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -181,17 +181,12 @@ interface {{ port_channel_interface.name }}
 {%     endif %}
 {%     if port_channel_interface.switchport.vlan_translations.direction_out is arista.avd.defined %}
 {%         for vlan_translation in port_channel_interface.switchport.vlan_translations.direction_out %}
-{%             if vlan_translation.to is arista.avd.defined %}
+{%             if vlan_translation.dot1q_tunnel_to is arista.avd.defined %}
+{%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from ~ ' dot1q-tunnel ' ~ vlan_translation.dot1q_tunnel_to %}
+{%             elif vlan_translation.to is arista.avd.defined %}
 {%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from ~ ' ' ~  vlan_translation.to %}
 {%                 if vlan_translation.inner_vlan_to is arista.avd.defined %}
 {%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' inner ' ~ vlan_translation.inner_vlan_to %}
-{%                 endif %}
-{%             elif vlan_translation.dot1q_tunnel is arista.avd.defined %}
-{%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from %}
-{%                 if vlan_translation.dot1q_tunnel.all is arista.avd.defined(true) %}
-{%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel all' %}
-{%                 elif vlan_translation.dot1q_tunnel.to is arista.avd.defined %}
-{%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel ' ~ vlan_translation.dot1q_tunnel.to %}
 {%                 endif %}
 {%             endif %}
 {%             if vlan_translation_out_cli is arista.avd.defined %}
